# github-auto-setup

./: .gitignore  README.md  TASK-FE-US001-API-UPLOAD-CALL-fix-plan.yml  TASK-FE-US001-ERROR-HANDLING-plan.yml  config.yaml.sample  index.html  package-lock.json  pyproject.toml  pytest.ini
.build/: Dockerfile  requirements.in  requirements.txt
.build/context/: .env.sample  docker-compose.yml  run.sh
.build/context/.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
docs/: TASK-CORELOGIC-AI-RULE-INFERENCE-plan.yml  agile-practice.yml  backlog.yml  coding-rules.yml  directory.json  github_setup_defaults.yml  glossary.md  issues.yml  requirements.md  requirements.yml  system-context.md  test_requirements.md  ui_ux_specifications.yml
docs/diagrams/: architecture-diagram.md  context-diagram.md
docs/plans/: BE-API-DRF-SETUP-plan.yml  BE-API-FILE-PROCESS-fix-plan.yml  BE-API-FILE-PROCESS-plan.yml  BE-API-GITHUB-ACTION-fix-plan.yml  BE-API-GITHUB-ACTION-plan.yml  DEV-ENV-REFACTOR-217-fix-plan.yml  DEV-ENV-REFACTOR-217-plan.yml  FE-STATIC-001-fix-plan.yml  FE-STATIC-001-plan.yml  TASK-BE-API-US001-FILE-PROCESS-ENDPOINT-fix-plan.yml  TASK-BE-API-US001-FILE-PROCESS-ENDPOINT-plan.yml  TASK-CORELOGIC-AUTH-APIKEY-fix-plan.yml  TASK-CORELOGIC-LABEL-MILESTONE-NORMALIZER-design.md  TASK-CORELOGIC-LABEL-MILESTONE-NORMALIZER-plan.yml  TASK-CORELOGIC-RULE-BASED-MAPPER-plan.yml  TASK-CORELOGIC-RULE-BASED-SPLITTER-plan.yml  TASK-FE-US001-API-UPLOAD-CALL-plan.yml  TASK-FE-US001-DISPLAY-LOGIC-fix-plan.yml  TASK-FE-US001-DISPLAY-LOGIC-plan.yml  TASK-FE-US001-UPLOAD-UI-plan.yml  US-001-fix-plan.yml  US-001-plan.yml
docs/review-request/: BE-API-DRF-SETUP-review.md  BE-API-FILE-PROCESS-fix-report.md  BE-API-FILE-PROCESS-review.md  BE-API-GITHUB-ACTION-fix-report.md  BE-API-GITHUB-ACTION-review.md  DEV-ENV-REFACTOR-217-e2e-proof.md  DEV-ENV-REFACTOR-217-fix-report.md  DEV-ENV-REFACTOR-217-review.md  FE-STATIC-001-fix-report.md  FE-STATIC-001-review.md  TASK-BE-API-US001-FILE-PROCESS-ENDPOINT-fix-report.md  TASK-BE-API-US001-FILE-PROCESS-ENDPOINT-review.md  TASK-CORELOGIC-AI-RULE-INFERENCE-review.md  TASK-CORELOGIC-AUTH-APIKEY-fix-report.md  TASK-CORELOGIC-LABEL-MILESTONE-NORMALIZER-fix-report.md  TASK-CORELOGIC-LABEL-MILESTONE-NORMALIZER-review.md  TASK-CORELOGIC-RULE-BASED-MAPPER-review.md  TASK-CORELOGIC-RULE-BASED-SPLITTER-fix-report.md  TASK-CORELOGIC-RULE-BASED-SPLITTER-review.md  TASK-FE-US001-API-UPLOAD-CALL-fix-report.md  TASK-FE-US001-API-UPLOAD-CALL-review.md  TASK-FE-US001-DISPLAY-LOGIC-fix-report.md  TASK-FE-US001-DISPLAY-LOGIC-review.md  TASK-FE-US001-ERROR-HANDLING-review.md  TASK-FE-US001-UPLOAD-UI-review.md  US-001-fix-report.md  US-001-review.md
docs/user-stories/US-001/: US-001_activitiy.md  US-001_activity.md  US-001_sequence.md
frontend/: base.html  index.html  jest.config.js  jest.config.mjs  package-lock.json  package.json  top_page.html
frontend/assets/css/: custom.css
frontend/assets/js/: display_logic.js  file_upload.js  issue_selection.js
frontend/assets/js/tests/: display_logic.test.js  file_upload.test.js
frontend/assets/tests/: issue_selection_ui.test.js
frontend/tests/: apiClient.test.js  issue_selection_ui.test.js
scripts/: run-prod.sh  sample_find_project.py  sample_issues.yml  test_ai_connection.py  test_github_connection.py
src/github_automation_tool/: __init__.py  main.py
src/github_automation_tool/adapters/: __init__.py  ai_parser.py  assignee_validator.py  cli.py  cli_reporter.py  github_client.py  github_graphql_client.py  github_rest_client.py  github_utils.py
src/github_automation_tool/domain/: exceptions.py  models.py
src/github_automation_tool/infrastructure/: config.py  file_reader.py
src/github_automation_tool/use_cases/: create_github_resources.py  create_issues.py  create_repository.py
tests/adapters/: test_ai_parser.py  test_assignee_validator.py  test_cli.py  test_cli_reporter.py  test_github_client.py  test_github_graphql_client.py  test_github_rest_client.py  test_github_utils.py
tests/domain/: test_models.py
tests/infrastructure/: test_config.py  test_file_reader.py
tests/samples/: run.sh  sample_project_setup.md
tests/use_cases/: test_create_github_resources.py  test_create_issues.py  test_create_repository.py
webapp/app/: authentication.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
webapp/app/migrations/: 0001_initial.py  0002_useraisettings.py
webapp/app/tests/: conftest.py  test_views.py
webapp/core_logic/: main.py
webapp/core_logic/adapters/: __init__.py  ai_parser.py  assignee_validator.py  cli.py  cli_reporter.py  github_graphql_client.py  github_rest_client.py  github_utils.py  issue_file_parser_base.py  json_issue_parser.py  label_milestone_normalizer.py  markdown_issue_parser.py  rule_based_splitter.py  yaml_issue_parser.py
webapp/core_logic/domain/: exceptions.py
webapp/core_logic/github_automation_tool/: main.py
webapp/core_logic/infrastructure/: file_reader.py
webapp/core_logic/services/: __init__.py  parse_issue_file_service.py  rule_based_mapper.py
webapp/core_logic/use_cases/: __init__.py  create_github_resources.py  create_issues.py  create_repository.py  local_save_use_case.py
webapp/static/: .gitkeep
webapp/templates/: .gitkeep  base.html  top_page.html
webapp/webapp_project/: asgi.py  settings.py  urls.py  wsgi.py
(+41 files in other folders)
