[project]
name = "github-automation-tool"
version = "0.1.0"
description = "GitHub Automation Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]

[project.urls]
Homepage = "https://github.com/your-username/github-automation-tool"
"Bug Tracker" = "https://github.com/your-username/github-automation-tool/issues"

[project.scripts]
gh-auto-tool = "github_automation_tool.main:app"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "webapp.webapp_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --maxfail=3"
pythonpath = ["webapp", "webapp/core_logic"]
testpaths = ["webapp/app", "webapp/core_logic/tests"]
django_find_project = false

[tool.coverage.run]
omit = [
    "src/github_automation_tool/__init__.py",
    "src/github_automation_tool/main.py",
    "src/github_automation_tool/domain/exceptions.py",
    "*/__init__.py"
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4"
]
ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.ruff.lint]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true